--- a/About us.html
+++ b/About us.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
 
@@ -17,7 +17,7 @@
 <div class="row">
     <div class="column">
         <div class="card">
-            <img src="images/Damir.PNG" alt="Damir" style="width:120px; height: 100px;">
+            <img src="../3.0%20Webproject/images/Damir.PNG" alt="Damir" style="width:120px; height: 100px;">
             <div class="container">
                 <h2>Damir Ciklusic</h2>
                 <p class="title">CEO & Founder</p>
