--- a/main.html
+++ b/main.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta lang="de"
-          content="simple ✅ free  ✅ Mit nur zwei Klicks eine eigene Wunschliste anlegen! Passend für Geburtstag, Hochzeit, Weihnachten, Baby uvm."
+          content="simple ✅ free  ✅ "
           name="description"/>
     <title>🎁 GetMeThis</title>
-    <link rel="icon" href="images/Tabicon.PNG">
+    <link rel="icon" href="../3.0%20Webproject/images/Tabicon.PNG">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
@@ -16,10 +16,10 @@
 
 <body>
 <header>
-    <a class="logo" href="main.html"><img src="images/Logo_first.png" alt="logo"></a>
+    <a class="logo" href="main.html"><img src="../3.0%20Webproject/images/Logo_first.png" alt="logo"></a>
     <nav>
         <ul class="nav__links">
-            <li><a href="#">Create Wishlist</a></li>
+            <li><a href="wishlist.html">Create Wishlist</a></li>
             <li><a href="#">Friends</a></li>
             <li><a href="About%20us.html">About us</a></li>
 
@@ -33,7 +33,7 @@
     <a class="close">&times;</a>
     <div class="overlay__content">
 
-        <a href="#">Create Wishlist</a>
+        <a href="wishlist.html">Create Wishlist</a>
         <a href="#">Friends</a>
         <a href="#">About us</a>
         <a href="signup.html">Login</a>
@@ -62,13 +62,15 @@
                 </div>
             </div>
             <div class="column column-1-3">
-                <img class="fade-in" src="/images/teaserBG.jpg">
+
+             <!--<img class="fade-in" src="images/teaserBG.jpg"> -->
+              
             </div>
         </div>
         <div class="row">
             <div class="column column-1-3 action-buttons">
                 <div class="new-wishlist-button">
-                    <a class="button" title="Create a Wishlist" href="newWishlist">Create a Wishlist</a>
+                    <a class="button" title="Create a Wishlist" href="wishlist.html">Create a Wishlist</a>
                 </div>
             </div>
         </div>
@@ -97,28 +99,28 @@
             </div>
             <div class="row">
                 <div class="column column-1">
-                    <img src="/images/Add_Wishlist.png" alt="Add wishlist">
-                    <h3>1. Wunschliste anlegen</h3>
+                    <img src="../3.0%20Webproject/images/Add_Wishlist.png" alt="Add wishlist">
+                    <h3>1. Create a wishlist</h3>
                     <p>
-                        Lege ohne vorherige Registrierung eine eigene Wunschliste an - vollkommen kostenlos. Ergänze so
-                        viele Wünsche wie du möchtest z.B. direkt aus einem Online-Shop, vom Blumengeschäft um die Ecke
-                        oder über unsere integrierte Wunschsuche.
+                        Create your own wish list - it's completely free. Complete so
+                        as many requests as you want, e.g. directly from an online shop, from the flower shop around the corner
+                        or via our integrated search.
                     </p>
                 </div>
                 <div class="column column-1">
-                    <img src="/images/@.png" alt="Forward wishlist">
-                    <h3>2. Wunschliste verteilen</h3>
+                    <img src="images/@.png" alt="Forward wishlist">
+                    <h3>2. Share your wishlist</h3>
                     <p>
-                        Verschicke deine Wunschliste an deine Freunde und Verwandten. Nur wer eingeladen wird hat
-                        Zugriff auf deine Wunschliste. Ungebetene Gäste bleiben draußen.
+                        Send your wishlist to your friends and relatives. Only those who are invited have
+                        Access to your wishlist. Uninvited guests stay outside.
                     </p>
                 </div>
                 <div class="column column-1">
-                    <img src="/assets/present-857f80e….png" alt="Present">
-                    <h3>3. Wunschgeschenke bekommen</h3>
+                    <img src="../3.0%20Webproject/images/present.png" alt="Present">
+                    <h3>3. Get desired gifts</h3>
                     <p>
-                        Besucher deiner Wunschliste können sich die Wünsche, die sie gerne erfüllen möchten,
-                        reservieren. So gibt es nie wieder ein Geschenk doppelt.
+                        Visitors to your wish-list can choose the wishes they would like to fulfill,
+                        Reservations. So there will never be a double gift again.
                     </p>
                 </div>
             </div>
